--- a/history/myths.html
+++ b/history/myths.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-11-18 Tue 01:57 -->
+<!-- 2025-12-03 Wed 13:49 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Indian history myths, narratives and overcorrections 🏗️</title>
@@ -205,7 +205,10 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org9df879f">0.1. more on Kautilya</a></li>
+<li><a href="#org82dc66f">0.1. No, Muslims did not &ldquo;invent algebra&rdquo;</a></li>
+<li><a href="#org9df879f">0.2. more on Kautilya</a></li>
+<li><a href="#orgcc12339">0.3. Chariot allegory</a></li>
+<li><a href="#org015c05a">0.4. worm gear</a></li>
 </ul>
 </li>
 <li><a href="#org7d5ec90">1. Hinduism, caste and narratives</a></li>
@@ -291,9 +294,41 @@ Dating: Kautilya, Gustav Oppert gunpowder, Ayodhya, Ramayana/MBh
 <p>
 <b>Left-wing myth:</b> Ayodhya didn&rsquo;t exist until the Gupta period. <b>Right-wing overcorrection:</b> Not only was Ayodhya historical, the Ramayana is completely historical, the Rama Sethu is man-made and was built 7000 years ago <b>Left-wing myth:</b> The Ramayana and Mahabharata were all made up during the Gupta period, Yudhishtira is actually based on Ashoka. <b>Right-wing overcorrection:</b> The Mahabharata is from 3000 BC and everything in it is true word-for-word, the Ramayana is from 7000 BC. Bardic literature etc. Exception: Ayurveda. <b>Left-wing myth:</b> The Aryans invaded India and enslaved the native population, creating the caste system. <b>Right-wing overcorrection:</b> The Aryan invasion never happened, Aryans originated in India and migrated outwards. <b>Left-wing myth:</b> Vikramaditya never existed, he was a legendary ruler just based on Chandragupta II. <b>Right-wing overcorrection:</b> Vikramaditya not only existed, he conquered the entire world including India, Arabia, Central Asia and Europe.
 </p>
-<div id="outline-container-org9df879f" class="outline-3">
-<h3 id="org9df879f"><span class="section-number-3">0.1.</span> more on Kautilya</h3>
+<div id="outline-container-org82dc66f" class="outline-3">
+<h3 id="org82dc66f"><span class="section-number-3">0.1.</span> No, Muslims did not &ldquo;invent algebra&rdquo;</h3>
 <div class="outline-text-3" id="text-0-1">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1991697735464989021">Twitter</a></p>
+</p>
+
+<p>
+Arabs did not &ldquo;create entirely new fields like algebra&rdquo; lol, Al-jabr is simply the Arabic word for balancing equations, and none of the contents of that text were original. It&rsquo;s equivalent to saying Muslims invented alcohol because alcohol is of Arabic etymology (al-kuhl).
+</p>
+
+<p>
+al-Jabr as referred to in al-Khwarizmi&rsquo;s text referred to something very elementary: balancing equations, i.e. basic rules like: if X = Y, then X + h = Y + h. This sort of math has been in use since Bronze Age Mesopotamia.
+</p>
+
+<p>
+Algebra as modern mathematicians use the term is kind of a sundry box of everything, but roughly I would say it is &ldquo;stuff that is motivated by the study of solving equations&rdquo;. E.g. solving polynomials led to group and field theory, solving linear equations led to linear algebra solving diophantine equations led to ring theory etc. The three main ancient precedents of this are:
+</p>
+
+<ol class="org-ol">
+<li>linear equations &#x2014; the only non-trivial premodern work of linear algebra I&rsquo;m aware of is the introduction of Gaussian elimination in The Nine Chapters, ~150 BC (ancient China was generally not too advanced in math; this is an exception). Other scholars wrote about linear equations: e.g. Thymaridas ~350 BC, but all very elementary stuff.</li>
+
+<li>polynomial equations &#x2014; quadratic equations have been solved since at least the Third Dynasty of Ur in Babylon (&lt;2000BC), and geometric methods to solve them existed in every major civilisation, but the first explicit algebraic solution to the equation was given by Brahmagupta (628 AD). However: Diophantus (3rd century) also solved quadratic equations algebraically without writing down the explicit general form, and Āryabhaṭa (499 AD) also technically gave a special case of the quadratic formula, but without stating it was that (he gave a formula for calculating n given the value of S=1+2+&#x2026;+n=n(n+1)/2).</li>
+
+<li>diophantine equations &#x2014; Pell&rsquo;s equations were first studied by the ancient Indians starting with Baudhāyana (c. 800 BC), and became a widespread field of study among both Indians and Greeks for finding rational approximations. Diophantus had many contributions to this area (as you might guess), but the bulk was carried out by Indians, e.g. on Pell&rsquo;s equations (Brahmagupta 628 AD, and Bhāskarācārya&rsquo;s cakravāla method) and the Chinese Remainder Theorem by Āryabhaṭa.</li>
+</ol>
+
+<p>
+There is also the more normie use of the term algebra to refer to symbolic notation. To my knowledge, this was first used by Diophantus, then by Brahmagupta, then popularized by Muslims such as al-Marrakushi (14th century) and al-Qalasadi (15th century). I recall reading that al-Qalasadi&rsquo;s notation was an improvement in some ways, though by this point European mathematicians had exceeded anything coming out of the Middle East.
+</p>
+</div>
+</div>
+<div id="outline-container-org9df879f" class="outline-3">
+<h3 id="org9df879f"><span class="section-number-3">0.2.</span> more on Kautilya</h3>
+<div class="outline-text-3" id="text-0-2">
 <p>
 It&rsquo;s all so tiresome. Already in Shamasastry&rsquo;s time, there were several challengers to the dating of the Arthaśāstra, which he had conclusively refuted.
 </p>
@@ -398,6 +433,54 @@ Links to Shamasastry&rsquo;s arguments:
 
 <p>
 <a href="https://www.wisdomlib.org/hinduism/book/kautilya-arthashastra/d/doc365575.html">https://www.wisdomlib.org/hinduism/book/kautilya-arthashastra/d/doc365575.html</a>
+</p>
+</div>
+</div>
+<div id="outline-container-orgcc12339" class="outline-3">
+<h3 id="orgcc12339"><span class="section-number-3">0.3.</span> Chariot allegory</h3>
+<div class="outline-text-3" id="text-0-3">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1994349592125583839">Twitter</a></p>
+</p>
+
+<p>
+This is of course from the Kaṭha Upaniṣad, but interestingly Plato in Phaedrus uses the same &ldquo;chariot allegory&rdquo;, and in the same section goes on to describe a karma based reincarnation system.
+</p>
+
+<p>
+IMO the Indian influence on Greek philosophy is undeniable.
+</p>
+
+<p>
+<a href="https://www.reddit.com/r/askphilosophy/comments/6ov0h5/are_those_two_chariot_allegories_related_plato/">https://www.reddit.com/r/askphilosophy/comments/6ov0h5/are_those_two_chariot_allegories_related_plato/</a>
+</p>
+
+<p>
+<img src="/img/snippetry/chariot_allegory.jpeg" alt="chariot_allegory.jpeg" />
+</p>
+</div>
+</div>
+<div id="outline-container-org015c05a" class="outline-3">
+<h3 id="org015c05a"><span class="section-number-3">0.4.</span> worm gear</h3>
+<div class="outline-text-3" id="text-0-4">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1994093443329741212">Twitter</a></p>
+</p>
+
+<p>
+Wikipedia, in multiple locations, states &ldquo;the worm drive cotton gin was invented in India during the time of the Delhi sultanate&rdquo;, citing Irfan Habib.
+</p>
+
+<p>
+This is &#x2026; technically true, except that Habib actually writes that the technology appeared in <b>peninsular</b> India, as the technology was widespread in the South but not the North.
+</p>
+
+<p>
+While the Delhi Sultanate invaded South India in the early 14th century, these were brief murderous raids that could hardly be said to be responsible for any innovation.
+</p>
+
+<p>
+<img src="/img/snippetry/worm_gear.png" alt="worm_gear.png" />
 </p>
 </div>
 </div>
@@ -858,7 +941,7 @@ Moderns see e.g. praise of Karṇa&rsquo;s skills in MBh and start worshiping hi
 </div></div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-11-18 Tue 01:57</p>
+<p class="date">Created: 2025-12-03 Wed 13:49</p>
 </div>
 </body>
 </html>
