--- a/history/sources/secondary.html
+++ b/history/sources/secondary.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-11-06 Thu 23:19 -->
+<!-- 2025-12-03 Wed 13:49 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Secondary sources</title>
@@ -220,7 +220,7 @@
 <li><a href="#org598ba84">2.2. Language, dating and authorship</a></li>
 </ul>
 </li>
-<li><a href="#org66a20cf">3. Twitter anons</a></li>
+<li><a href="#org018395b">3. Anons</a></li>
 </ul>
 </div>
 </div>
@@ -290,6 +290,7 @@ This post provides a bibiliography of high-quality, information-dense books on I
 <li>You Zhao (2023), <i>Oneself as Another: Yantraputraka Metaphors in Buddhist Literature</i>. Full text from <a href="https://www.mdpi.com/2077-1444/14/4/503">mdpi.com</a>.</li>
 <li>TM Srinivasan (1970), <i>Water-lifting devices in Ancient India: ther origin and mechanisms (from the earliest times to c. AD 1000)</i>. 8 pages. Full text from <a href="https://insa.nic.in/writereaddata/UpLoadedFiles/IJHS/Vol05_2_15_TMSrinivasan.pdf">insa.nic.in</a>.</li>
 <li>PC Ray (1956), <i>History of chemistry in Ancient and Medieval India</i>. 574 pages. Full text from <a href="https://archive.org/details/historyofchemistryinancientmedievalindiaprofullachandraray1956_486_J/page/n17/mode/2up">archive.org</a>.</li>
+<li>T.K Puttaswamy (2012), <i>Mathematical Achievements of Pre-modern Indian Mathematicians</i>. 730 pages.</li>
 <li>Radhavallabh Tripathi (2021), <i>Vāda in Theory and Practice: Studies in Debates, Dialogues and Discussions in Indian Intellectual Discourses</i>. 434 pages. Preview from <a href="https://books.google.co.uk/books?id=ay0dEAAAQBAJ&amp;pg=PT12&amp;source=gbs_selected_pages&amp;cad=1#v=onepage&amp;q&amp;f=false">Google Books</a>, buy from <a href="https://dkprintworld.com/product/vada-in-theory-and-practice/">publisher</a> or elsewhere.</li>
 <li>Radhakumud Mookerji (1951), <i>Ancient Indian Education (Brahmanical and Buddhist)</i>. 748 pages. Full texts from <a href="https://archive.org/details/dli.csl.7590/page/n13/mode/2up">archive.org</a>, <a href="https://www.indianculture.gov.in/ebooks/ancient-indian-education-brahmanical-and-buddhist">indianculture.gov.in</a>.</li>
 <li>Jayatilleke (1963), <i>Early Buddhist Theory of Knowledge</i>. 526 pages. Full text from <a href="https://archive.org/details/EarlyBuddhistTheoryOfKnowledge">archive.org</a>.</li>
@@ -363,23 +364,30 @@ This post provides a bibiliography of high-quality, information-dense books on I
 </div>
 </div>
 </div>
-<div id="outline-container-org66a20cf" class="outline-2">
-<h2 id="org66a20cf"><span class="section-number-2">3.</span> Twitter anons</h2>
+<div id="outline-container-org018395b" class="outline-2">
+<h2 id="org018395b"><span class="section-number-2">3.</span> Anons</h2>
 <div class="outline-text-2" id="text-3">
 <p>
-Some Twitter accounts that post on Indian history, worth a follow:
+Follow these handles on twitter, or subscribe to <a href="https://x.com/i/lists/1831399321117319397/">this list</a>.
 </p>
 
 <ul class="org-ul">
-<li>Myself: <a href="https://x.com/real_mahalingam">@real<sub>mahalingam</sub></a></li>
-<li>Academic-coded: <a href="https://twitter.com/suhasm">@suhasm</a>, <a href="https://twitter.com/AnushaSRao2">@AnushaSRao2</a>, <a href="https://twitter.com/avtansa">@avtansa</a>, <a href="https://twitter.com/ShivalikToto">@ShivalikToto</a>, <a href="https://twitter.com/maitra_varuna">@maitra<sub>varuna</sub></a>, <a href="https://twitter.com/vicitracitta">@vicitracitta</a>, <a href="https://twitter.com/sharmasatyan">@sharmasatyan</a>, <a href="https://x.com/SebastianNehrd2">SebastianNehrd2</a>, <a href="https://x.com/longhandnotes/">@longhandnotes</a></li>
-<li>Trad-coded: <a href="https://twitter.com/blog_supplement">@blog<sub>supplement</sub></a> (<a href="https://manasataramgini.wordpress.com/">manasataramgini</a>), <a href="https://twitter.com/shrikanth_krish">@shrikanth<sub>krish</sub></a>, <a href="https://twitter.com/satoverma">@satoverma</a>, <a href="https://twitter.com/arya_amsha">@arya<sub>amsha</sub></a></li>
-<li>Brahmanical Patriarchy Enjoyer-coded: <a href="http://twitter.com/sapratha">@sapratha</a> (<a href="https://bharadvajatmaja.substack.com/">substack</a>), <a href="https://twitter.com/dhanyavisnu">@dhanyavisnu</a></li>
-<li>AIT-Alt-coded: <a href="https://twitter.com/agenetics1">@agenetics1</a>, <a href="https://twitter.com/Ugra___">@Ugra___</a></li>
-<li>Boomer coded: <a href="https://x.com/TrueIndology">@TrueIndology</a> <a href="https://x.com/prathgodbole">@prathgodbole</a></li>
-<li>Misc based: <a href="https://x.com/aayush_sin60488">@aayush<sub>sin60488</sub></a></li>
-<li>Commie-coded: <a href="https://twitter.com/sialmirzagoraya">@sialmirzagoraya</a>, <a href="https://twitter.com/The_Equationist">@The<sub>Equationist</sub></a>, <a href="https://x.com/Rtam86418021/">@Rtam86418021</a></li>
-<li>Not Indian-specific: <a href="https://twitter.com/Peter_Nimitz">@Peter<sub>Nimitz</sub></a>, <a href="https://twitter.com/XianyangCB">@XianyangCB</a>, <a href="https://twitter.com/razibkhan">@razibkhan</a>, <a href="https://twitter.com/orientalismus">@orientalismus</a>, <a href="https://twitter.com/Paracelsus1092">@Paracelsus1092</a>, <a href="https://x.com/LykosPagan">@LykosPagan</a></li>
+<li>Twitter anons
+<ul class="org-ul">
+<li><a href="https://twitter.com/suhasm">@suhasm</a>, <a href="https://twitter.com/AnushaSRao2">@AnushaSRao2</a>, <a href="https://twitter.com/avtansa">@avtansa</a>, <a href="https://twitter.com/ShivalikToto">@ShivalikToto</a>, <a href="https://twitter.com/vicitracitta">@vicitracitta</a>, <a href="https://twitter.com/sharmasatyan">@sharmasatyan</a>, <a href="https://x.com/longhandnotes/">@longhandnotes</a>, <a href="https://twitter.com/blog_supplement">@blog\<sub>supplement</sub></a> (<a href="https://manasataramgini.wordpress.com/">manasataramgini</a>), <a href="http://twitter.com/sapratha">@sapratha</a> (<a href="https://bharadvajatmaja.substack.com/">substack</a>), <a href="https://twitter.com/maitra_varuna">@maitra\<sub>varuna</sub></a>, <a href="https://x.com/shrutammegopaya">@shrutammegopaya</a>, <a href="https://twitter.com/satoverma">@satoverma</a>, <a href="https://twitter.com/arya_amsha">@arya\<sub>amsha</sub></a>, <a href="https://twitter.com/dhanyavisnu">@dhanyavisnu</a>, <a href="https://x.com/TrueIndology">@TrueIndology</a> <a href="https://x.com/prathgodbole">@prathgodbole</a>, <a href="https://x.com/aayush_sin60488">@aayush\<sub>sin60488</sub></a>, <a href="https://x.com/Param_Chaitanya">@Param<sub>Chaitanya</sub></a>, <a href="https://x.com/bennylloyd102">@bennylloyd102</a></li>
+<li>Alt types: <a href="https://twitter.com/agenetics1">@agenetics1</a>, <a href="https://twitter.com/Ugra___">@Ugra\_\_\_</a></li>
+<li>Suspicious politics: <a href="https://twitter.com/sialmirzagoraya">@sialmirzagoraya</a>, <a href="https://twitter.com/The_Equationist">@The\<sub>Equationist</sub></a>, <a href="https://x.com/Rtam86418021/">@Rtam86418021</a>, <a href="https://x.com/Saatvata">@saatvata</a>, <a href="https://x.com/SebastianNehrd2">SebastianNehrd2</a></li>
+<li>Not Indian-specific: <a href="https://twitter.com/Peter_Nimitz">@Peter\<sub>Nimitz</sub></a>, <a href="https://twitter.com/XianyangCB">@XianyangCB</a>, <a href="https://twitter.com/razibkhan">@razibkhan</a>, <a href="https://twitter.com/orientalismus">@orientalismus</a>, <a href="https://twitter.com/Paracelsus1092">@Paracelsus1092</a>, <a href="https://x.com/LykosPagan">@LykosPagan</a></li>
+<li>Aesthetics: <a href="https://x.com/sidharthgehlot">@sidharthgehlot</a>, <a href="https://x.com/achintyavenk">@achintyavenk</a>, <a href="https://x.com/Yaduvam">@Yaduvam</a>, <a href="https://x.com/IndicAesthetics">@IndicAesthetics</a></li>
+<li>Myself: <a href="https://x.com/real_mahalingam">@real\<sub>mahalingam</sub></a></li>
+</ul></li>
+<li>Youtube:
+<ul class="org-ul">
+<li><a href="https://www.youtube.com/@gandaberunda6267">@gandaberunda6267</a></li>
+<li><a href="https://www.youtube.com/@OddCompass">@OddCompass</a></li>
+<li><a href="https://www.youtube.com/@iip">@iip</a></li>
+<li><a href="https://www.youtube.com/@JayVardhanSingh">Jay Vardhan Singh</a></li>
+</ul></li>
 <li>A very interesting project, not out yet: <i>The Illustrated Encyclopedia of Indian History</i>. <a href="https://www.samudbhavafoundation.org/">Website</a>, Twitter: <a href="https://twitter.com/ilustratedIndia">@ilustratedindia</a>.</li>
 </ul>
 
@@ -395,7 +403,7 @@ Some particularly good snippets by these authors: - REDACTED, _<a href="https://
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-11-06 Thu 23:19</p>
+<p class="date">Created: 2025-12-03 Wed 13:49</p>
 </div>
 </body>
 </html>
