--- a/history/tropes.html
+++ b/history/tropes.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-11-02 Sun 13:15 -->
+<!-- 2025-12-03 Wed 13:49 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>3 pitfalls to avoid in reading Indian history 🏗️</title>
@@ -209,7 +209,8 @@
 <li><a href="#org7bf45ac">2. Contradictions</a></li>
 <li><a href="#orgb81aca4">3. Orientalism</a></li>
 <li><a href="#org8adfaa5">4. other tropes</a></li>
-<li><a href="#org39f9a70">5. Re: Medieval Revivals in the West</a></li>
+<li><a href="#orgeb6b5ad">5. Decentralized society</a></li>
+<li><a href="#org39f9a70">6. Re: Medieval Revivals in the West</a></li>
 </ul>
 </div>
 </div>
@@ -392,9 +393,39 @@ Some Hindu king had perished at the hand of an enemy of his who had marched agai
 </p>
 </div>
 </div>
-<div id="outline-container-org39f9a70" class="outline-2">
-<h2 id="org39f9a70"><span class="section-number-2">5.</span> Re: Medieval Revivals in the West</h2>
+<div id="outline-container-orgeb6b5ad" class="outline-2">
+<h2 id="orgeb6b5ad"><span class="section-number-2">5.</span> Decentralized society</h2>
 <div class="outline-text-2" id="text-5">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1993968289127780816">Twitter</a></p>
+</p>
+
+<p>
+For India this is explained by the latter being less dependent on the state: Mediterranean civilization as a whole stagnated with Roman conquest and collapsed when the empire collapsed, while Indian civilization went on independent of the ruling dynasty due to: 
+</p>
+
+<ol class="org-ol">
+<li>its strong &ldquo;decentralized&rdquo; cultural institutions (corporations &amp; gurukulas, and later temples)</li>
+
+<li>norms against harming civilians and causing economic destruction in war (at least in the North)</li>
+</ol>
+
+<p>
+at least until faced by invasion from external forces that explicitly sought to target those cultural institutions.
+</p>
+
+<p>
+China is far more confusing to me, as it was in fact a highly state-centric society.
+</p>
+
+<p>
+<img src="/img/charts/civsup.png" alt="civsup.png" />
+</p>
+</div>
+</div>
+<div id="outline-container-org39f9a70" class="outline-2">
+<h2 id="org39f9a70"><span class="section-number-2">6.</span> Re: Medieval Revivals in the West</h2>
+<div class="outline-text-2" id="text-6">
 <p>
 Iran
 </p>
@@ -443,7 +474,7 @@ Kshatriyas becoming Brahmins Brahmanda Purana 3.66:86a-90
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-11-02 Sun 13:15</p>
+<p class="date">Created: 2025-12-03 Wed 13:49</p>
 </div>
 </body>
 </html>
