--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-11-18 Tue 02:12 -->
+<!-- 2025-12-03 Wed 13:49 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</title>
@@ -308,6 +308,8 @@ I made <a href="https://github.com/srajma/xatra">xatra</a>, the best map-making 
 <li><a href="politics/misc/legend.html">Founding legends</a></li>
 <li><a href="politics/misc/kannada.html">Kannada sub-nationalism</a></li>
 <li><a href="politics/misc/indian_traits.html">Misc Indian traits</a></li>
+<li><a href="politics/misc/ottoman.html">Misleading claims about the Ottoman empire and the Irish famine</a></li>
+<li><a href="politics/misc/muslim_rage_boy.html">Muslim Rage Boy</a></li>
 <li><a href="politics/misc/dalali.html">ON DALĀLĪ AND BAVĀLĪ IN HINDOOSTĀN (ON SIMPING AND CHIMPING IN HINDOOSTĀN).</a></li>
 <li><a href="politics/misc/sindoor.html">Operation Sindoor concluding thoughts</a></li>
 <li><a href="politics/misc/racewars.html">Racewars</a></li>
@@ -345,6 +347,7 @@ I made <a href="https://github.com/srajma/xatra">xatra</a>, the best map-making 
 <li><a href="politics/rhetorical-advice/copology.html">Cope-ologia</a></li>
 <li><a href="politics/rhetorical-advice/positive-vision.html">Importance of a positive vision, and knowing WHY you believe what you believe ⭐</a></li>
 <li><a href="politics/rhetorical-advice/misc.html">Misc advice on rhetoric and arguing ⭐</a></li>
+<li><a href="politics/rhetorical-advice/baitability.html">Pompous Baitability</a></li>
 <li><a href="politics/rhetorical-advice/upaya.html">Salesman mentality vs Haka dancer mentality (aka &ldquo;There is no fifth upāya&rdquo;) ⭐</a></li>
 <li><a href="politics/rhetorical-advice/talk.html">Talk! All publicity is good publicity</a></li>
 <li><a href="politics/rhetorical-advice/persuasion.html">To make people Right-wing, reflect on what made you Right-wing ⭐</a></li>
@@ -374,6 +377,8 @@ I made <a href="https://github.com/srajma/xatra">xatra</a>, the best map-making 
 <ul class="org-ul">
 <li><a href="https://manasataramgini.wordpress.com/">Mānasataraṅgiṇī</a></li>
 <li><a href="https://bharadvajatmaja.substack.com/">Shailesh Bharadwaj</a></li>
+<li><a href="https://bharatkalyan97.blogspot.com">Bharat Kalyan</a></li>
+<li><a href="https://benjaminindology.wordpress.com/">Benjamindology</a></li>
 <li>Vishvas Vasuki: <a href="https://vishvasa.github.io/">website</a>, <a href="https://github.com/sanskrit/gotra-haplogroup/tree/master">gotra haplogroup proj</a>, <a href="https://github.com/indic-dict/stardict-sanskrit/blob/master/sa-head/en-entries/MT-paribhAShA/MT-paribhAShA.babylon">mānasataraṅginī dictionary</a></li>
 </ul></li>
 <li>International politics blogs
@@ -419,7 +424,7 @@ I made <a href="https://github.com/srajma/xatra">xatra</a>, the best map-making 
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-11-18 Tue 02:12</p>
+<p class="date">Created: 2025-12-03 Wed 13:49</p>
 </div>
 </body>
 </html>
