--- a/other-people/takes.html
+++ b/other-people/takes.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-11-18 Tue 01:57 -->
+<!-- 2025-12-03 Wed 13:49 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Favorite tweets by others</title>
@@ -259,18 +259,19 @@
 <li><a href="#orgdd3dbe3">5.7. micro-targeting</a></li>
 </ul>
 </li>
-<li><a href="#org1beda83">6. Misc</a>
+<li><a href="#org1794ef3">6. Hussein Aboubakr Mansour</a></li>
+<li><a href="#org1beda83">7. Misc</a>
 <ul>
-<li><a href="#orgcd4e4e0">6.1. sub sub sub jati</a></li>
-<li><a href="#orgf4d1dce">6.2. McAdams&rsquo; eternal boomer wisdom</a></li>
-<li><a href="#org51c6894">6.3. white guilt</a></li>
-<li><a href="#org58d67cb">6.4. this dipshit ankit mishra</a></li>
-<li><a href="#org6882465">6.5. elite factionalism</a></li>
-<li><a href="#orga254842">6.6. baby boom</a></li>
-<li><a href="#org7b62be6">6.7. Polite fictions</a></li>
-<li><a href="#org76cfaf4">6.8. Advanced Pakistani Sociology</a></li>
-<li><a href="#orgd6d2bac">6.9. American foreign policy</a></li>
-<li><a href="#org459fd55">6.10. Rahul Gandhi</a></li>
+<li><a href="#orgcd4e4e0">7.1. sub sub sub jati</a></li>
+<li><a href="#orgf4d1dce">7.2. McAdams&rsquo; eternal boomer wisdom</a></li>
+<li><a href="#org51c6894">7.3. white guilt</a></li>
+<li><a href="#org58d67cb">7.4. this dipshit ankit mishra</a></li>
+<li><a href="#org6882465">7.5. elite factionalism</a></li>
+<li><a href="#orga254842">7.6. baby boom</a></li>
+<li><a href="#org7b62be6">7.7. Polite fictions</a></li>
+<li><a href="#org76cfaf4">7.8. Advanced Pakistani Sociology</a></li>
+<li><a href="#orgd6d2bac">7.9. American foreign policy</a></li>
+<li><a href="#org459fd55">7.10. Rahul Gandhi</a></li>
 </ul>
 </li>
 </ul>
@@ -1005,13 +1006,46 @@ Congressi micro targeting ( maybe I might be making them out to be smarter than 
 </div>
 </div>
 </div>
-<div id="outline-container-org1beda83" class="outline-2">
-<h2 id="org1beda83"><span class="section-number-2">6.</span> Misc</h2>
+<div id="outline-container-org1794ef3" class="outline-2">
+<h2 id="org1794ef3"><span class="section-number-2">6.</span> Hussein Aboubakr Mansour</h2>
 <div class="outline-text-2" id="text-6">
+<p>
+<p class="byline">Published on <a href="https://x.com/HusseinAboubak/status/1955804038529798374">Twitter</a> by <a href="https://x.com/HusseinAboubak">@HusseinAboubak</a></p>
+How, then, could self-declared secular and progressive leftist activists in the West defend jihadist movements such as Hezbollah and Hamas, or even attempt to mitigate the culpability of al-Qaeda, despite their manifest disregard for women’s rights, secularism, and other liberal-progressive values? What about the supposed commitments to feminism, to individual liberties, to the separation of religion and state?
+</p>
+
+<p>
+The answer lies in the role of the critical intellectual within the globalized milieu of the international Left. In Western societies, this figure’s task is not to uphold universal liberal norms but to re-interpret events — especially those emerging from revolutionary movements in the Global South — through the lens of anti-capitalist and anti-imperialist theory. <b>The process works as follows: the “native” critical intellectual in a Muslim or Arab revolutionary context generates acts of resistance — military, political, or cultural — against Western power, capitalism, and Zionism. These acts, and the narratives surrounding them, are received in the West as raw “input” by sympathetic academics, journalists, and activists.</b>
+</p>
+
+<p>
+The Western critical intellectual then reframes these actions as legitimate resistance against the global structure of capitalist exploitation and imperial domination. The religious, illiberal, and often authoritarian nature of these movements is not ignored so much as bracketed — treated as a historically contingent detail that will dissolve in the long arc of liberation. In the meantime, such movements are re-imagined as exotic ornaments that add authenticity, diversity, and revolutionary vigor to the West’s own radicalizing theories of anti-capitalism, anti-Westernism, and anti-Zionism.
+</p>
+
+<p>
+This output — the Western intellectual’s affirmation — does not remain in the West. It often travels back to the “native” revolutionary vanguard as an endorsement from within Western intellectualism itself, a validation that their cause has not only local but global legitimacy. This feedback loop helps explain why, when U.S. forces killed Osama bin Laden, they found in his hideout a number of books by Western leftist scholars, including Noam Chomsky. Such works provided ideological ammunition, rhetorical framing, and moral reassurance that jihadist violence was not an isolated fanaticism but part of a broader, righteous struggle against Western hegemony.
+</p>
+
+<p>
+These exchanges form what might be called an intellectual supply chain — busy, reciprocal, and durable — that has been active for decades. There are many such supply chains linking militants, activists, journalists, NGOs, and academics into a single global conversation. Together, they constitute an imagined community that styles itself as “the international Left.” This is not a clandestine conspiracy, but a transnational network of self-identifying radicals, an “imagined body” with a shared moral vocabulary and shared enemies.
+</p>
+
+<p>
+Judith Butler, the influential feminist scholar and activist, once expressed this with disarming frankness, describing Hamas and Hezbollah as “part of the global Left.” The international Left thus encompasses an expansive constellation: activists, reporters, professors, journalists, political movements, parties, and sympathetic politicians. It also includes institutional infrastructures: NGOs, human rights organizations, conflict-resolution agencies, development bodies, and international media outlets such as Al-Jazeera — and, increasingly, segments of the American legacy media establishment.
+</p>
+
+<p>
+At the very center of this network stand the universities of the Western world, especially the humanities, which act as both the theoretical laboratories and the human-capital suppliers for the entire system. In the terms of Ibn Khaldun, this international Left possesses a kind of ‘asabiyyah — an intense, cross-border group solidarity animated by revolutionary and critical theories rather than by kinship or tribe. It was this network, in an earlier and less hegemonic form, that embraced the cause of Arab nationalism, then Palestinian radicalism, and ultimately came to adopt the more militant Islamist currents as strategic allies in the wider struggle against the Western-led global order.
+</p>
+</div>
+</div>
+<div id="outline-container-org1beda83" class="outline-2">
+<h2 id="org1beda83"><span class="section-number-2">7.</span> Misc</h2>
+<div class="outline-text-2" id="text-7">
 </div>
 <div id="outline-container-orgcd4e4e0" class="outline-3">
-<h3 id="orgcd4e4e0"><span class="section-number-3">6.1.</span> sub sub sub jati</h3>
-<div class="outline-text-3" id="text-6-1">
+<h3 id="orgcd4e4e0"><span class="section-number-3">7.1.</span> sub sub sub jati</h3>
+<div class="outline-text-3" id="text-7-1">
 <p>
 <p class="byline">Published on <a href="https://x.com/Rjrasva/status/1158583239424008192">Twitter</a> by <a href="https://x.com/Rjrasva">@Rjrasva</a></p>
 yes very great, u will build a great Hindu raj out of ur 1000 members of the pure sub sub sub sub sub sub jati
@@ -1023,8 +1057,8 @@ china, amreeka, sullas r all quaking in their boots abt facing such a mighty ene
 </div>
 </div>
 <div id="outline-container-orgf4d1dce" class="outline-3">
-<h3 id="orgf4d1dce"><span class="section-number-3">6.2.</span> McAdams&rsquo; eternal boomer wisdom</h3>
-<div class="outline-text-3" id="text-6-2">
+<h3 id="orgf4d1dce"><span class="section-number-3">7.2.</span> McAdams&rsquo; eternal boomer wisdom</h3>
+<div class="outline-text-3" id="text-7-2">
 <p>
 <p class="byline">Published on <a href="https://x.com/Balancing_Actor/status/1662313231103426560">Twitter</a> by <a href="https://x.com/Balancing_Actor">@Balancing_Actor</a></p>
 Few truths that will hold for most of your life.
@@ -1117,8 +1151,8 @@ Most underrated thread on this app. I would add:
 </div>
 </div>
 <div id="outline-container-org51c6894" class="outline-3">
-<h3 id="org51c6894"><span class="section-number-3">6.3.</span> white guilt</h3>
-<div class="outline-text-3" id="text-6-3">
+<h3 id="org51c6894"><span class="section-number-3">7.3.</span> white guilt</h3>
+<div class="outline-text-3" id="text-7-3">
 <p>
 <p class="byline">Published on <a href="https://x.com/Indian_Bronson/status/1658452152769994753">Twitter</a> by <a href="https://x.com/Indian_Bronson">@Indian_Bronson</a></p>
 White Guilt is just a covert way of trying to feel esteem from White Supremacy.
@@ -1146,8 +1180,8 @@ That is precisely the pose you see adopted (out of status necessity) by men even
 </div>
 </div>
 <div id="outline-container-org58d67cb" class="outline-3">
-<h3 id="org58d67cb"><span class="section-number-3">6.4.</span> this dipshit ankit mishra</h3>
-<div class="outline-text-3" id="text-6-4">
+<h3 id="org58d67cb"><span class="section-number-3">7.4.</span> this dipshit ankit mishra</h3>
+<div class="outline-text-3" id="text-7-4">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1950433966617776262">Twitter</a></p>
 The right mistakes volume for argument, and outrage for ideology.
@@ -1155,8 +1189,8 @@ The right mistakes volume for argument, and outrage for ideology.
 </div>
 </div>
 <div id="outline-container-org6882465" class="outline-3">
-<h3 id="org6882465"><span class="section-number-3">6.5.</span> elite factionalism</h3>
-<div class="outline-text-3" id="text-6-5">
+<h3 id="org6882465"><span class="section-number-3">7.5.</span> elite factionalism</h3>
+<div class="outline-text-3" id="text-7-5">
 <p>
 <p class="byline">Published on <a href="https://x.com/okaythenme/status/1835201905678860728">Twitter</a> by <a href="https://x.com/okaythenme">@okaythenme</a></p>
 </p>
@@ -1197,8 +1231,8 @@ This is why even if Trump somehow manages to pull off another shocker in Novembe
 </div>
 </div>
 <div id="outline-container-orga254842" class="outline-3">
-<h3 id="orga254842"><span class="section-number-3">6.6.</span> baby boom</h3>
-<div class="outline-text-3" id="text-6-6">
+<h3 id="orga254842"><span class="section-number-3">7.6.</span> baby boom</h3>
+<div class="outline-text-3" id="text-7-6">
 <p>
 <p class="byline">Published on <a href="https://x.com/cremieuxrecueil/status/1824491117779251490">Twitter</a> by <a href="https://x.com/cremieuxrecueil">@cremieuxrecueil</a></p>
 During the Manhattan Project, there was a baby boom among the scientists.
@@ -1239,8 +1273,8 @@ Since the town of Los Alamos did not officially exist, everyone born at the site
 </div>
 </div>
 <div id="outline-container-org7b62be6" class="outline-3">
-<h3 id="org7b62be6"><span class="section-number-3">6.7.</span> Polite fictions</h3>
-<div class="outline-text-3" id="text-6-7">
+<h3 id="org7b62be6"><span class="section-number-3">7.7.</span> Polite fictions</h3>
+<div class="outline-text-3" id="text-7-7">
 <p>
 <p class="byline">Published on <a href="https://x.com/nixonist/status/1817726711317909617">Twitter</a> by <a href="https://x.com/nixonist">@nixonist</a></p>
 </p>
@@ -1275,8 +1309,8 @@ Imagine how confused kids today must be about basic aspects of reality. Parents 
 </div>
 </div>
 <div id="outline-container-org76cfaf4" class="outline-3">
-<h3 id="org76cfaf4"><span class="section-number-3">6.8.</span> Advanced Pakistani Sociology</h3>
-<div class="outline-text-3" id="text-6-8">
+<h3 id="org76cfaf4"><span class="section-number-3">7.8.</span> Advanced Pakistani Sociology</h3>
+<div class="outline-text-3" id="text-7-8">
 <p>
 <p class="byline">Also published on <a href="https://x.com/JhalaZalimSingh/status/1950942359103148352">Twitter</a></p>
 A wise man once said &ldquo;Pakistanis are absolutely shameless. Tum inke samne inki ma ch*d do &amp; they will boast hmne tumhe nanga dekha hai&rdquo;
@@ -1289,8 +1323,8 @@ A wise man once said &ldquo;Pakistanis are absolutely shameless. Tum inke samne 
 </div>
 </div>
 <div id="outline-container-orgd6d2bac" class="outline-3">
-<h3 id="orgd6d2bac"><span class="section-number-3">6.9.</span> American foreign policy</h3>
-<div class="outline-text-3" id="text-6-9">
+<h3 id="orgd6d2bac"><span class="section-number-3">7.9.</span> American foreign policy</h3>
+<div class="outline-text-3" id="text-7-9">
 <p>
 <p class="byline">Published on <a href="https://x.com/LoliCongress/status/1851900087854932475">Twitter</a> by <a href="https://x.com/LoliCongress">@LoliCongress</a></p>
 Donald Trump&rsquo;s point that &ldquo;It&rsquo;s a shame Iraq wasn&rsquo;t actually about the Oil&rdquo; is such an amazing point because as much as the Liberals wish American policy was driven by realist and corporate interests of natural resource extraction, the Truth is far more stupid.
@@ -1310,8 +1344,8 @@ Aside from certain extraordinary Secretary of States and Presidents, it&rsquo;s 
 </div>
 </div>
 <div id="outline-container-org459fd55" class="outline-3">
-<h3 id="org459fd55"><span class="section-number-3">6.10.</span> Rahul Gandhi</h3>
-<div class="outline-text-3" id="text-6-10">
+<h3 id="org459fd55"><span class="section-number-3">7.10.</span> Rahul Gandhi</h3>
+<div class="outline-text-3" id="text-7-10">
 <p>
 those who thought he was naive and stupid should know he is now most frustrated, cunning, ruthless and arrogant man without any principles or ideology, who can even sell his country for his desire to be PM
 </p>
@@ -1321,7 +1355,7 @@ those who thought he was naive and stupid should know he is now most frustrated,
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-11-18 Tue 01:57</p>
+<p class="date">Created: 2025-12-03 Wed 13:49</p>
 </div>
 </body>
 </html>
