--- a/politics/agency/incel.html
+++ b/politics/agency/incel.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-18 Mon 08:28 -->
+<!-- 2025-12-03 Wed 13:49 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Agency, bhōsaḍpillers and Party Workers vs Customers ⭐</title>
@@ -459,12 +459,33 @@ Meanwhile our bhōsaḍpillers do &#x2026; literally nothing.
 <p>
 There is no feeling of danger that they evoke in people. Even more importantly they do not actually achieve any right-wing goals in the cultural sphere. In fact they don&rsquo;t even have any definable right-wing ideology most of the time &#x2014; they romanticize pre-1991 India (because &ldquo;no OBC reservations&rdquo; or whatever), they seethe and chimp out at Nārāyaṇa Mūrthī telling them they should work hard, they find common cause with Muslims, they whine and seethe about racism (while being very crassly casteist at the same time). Their <i>only identifying feature is opposition to the mainstream right-wing</i>.
 </p>
+
+<hr />
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1992301657762234553">Twitter</a></p>
+</p>
+
+<p>
+It depends on:
+</p>
+
+<ol class="org-ol">
+<li>whether the criticism is on something that can be practically implemented or convince people to update towards your ideology—stuff that bpillers talk about (especially reservations) cannot persuade people besides hard-RW ideologues, so they don&rsquo;t move the Overton window, just cause polarization.</li>
+
+<li>how important is the leader being criticized? Modi is very important (and even all those who may succeed him are closely associated with him). Mamdani is easily replaceable, both in politics and in the culture war. In general the left has this benefit of having a high bus factor: they depend less on &ldquo;great men&rdquo; and more on the whole Cathedral.</li>
+
+<li>is the issue is something that the normies (i.e. not political activists/extremists) of your base care about? BJP&rsquo;s GC base (not hard-RW ideologues) are moved by talk of reservations and taxes, normie-libs who voted for Mamdani won&rsquo;t be put off by &ldquo;he condemned an anti-semitic attack&rdquo; or whatever.</li>
+
+<li>how smart is the audience for the bpilling? Leftists have enough clarity about their ideology to still know whom to support, etc. A good chunk of our guys are bholā enough to &ldquo;teach a lesson&rdquo; to BJP, or just get demotivated by the bpilling.</li>
+
+<li>how agentic are both the bpiller and the audience? Leftists don&rsquo;t demotivate their base when they bpill, because they offer their own path i.e. for leftist ideologues, leftist activism etc is their entire life. They don&rsquo;t need a leader to be passionate about.</li>
+</ol>
 </div>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-18 Mon 08:28</p>
+<p class="date">Created: 2025-12-03 Wed 13:49</p>
 </div>
 </body>
 </html>
