--- a/politics/agency/wiki.html
+++ b/politics/agency/wiki.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-10-18 Sat 00:20 -->
+<!-- 2025-12-03 Wed 13:49 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Wiki</title>
@@ -206,6 +206,7 @@
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
 <li><a href="#orgff7791c">1. Worldbuilding</a></li>
+<li><a href="#orgfceb5e7">2. inventions and stuff</a></li>
 </ul>
 </div>
 </div>
@@ -245,10 +246,22 @@ The work is impressive, but Indians shouldn&rsquo;t be satisfied with re-telling
 </p>
 </div>
 </div>
+<div id="outline-container-orgfceb5e7" class="outline-2">
+<h2 id="orgfceb5e7"><span class="section-number-2">2.</span> inventions and stuff</h2>
+<div class="outline-text-2" id="text-2">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1994078285777785121">Twitter</a></p>
+</p>
+
+<p>
+Yeah I can think of a lot more I&rsquo;d add in each category. What would be ideal is a comprehensive list of technologies, scientific ideas and other stuff <b>present</b> in India, with original innovations, firsts, and plausible firsts marked, and a distinction made between absolute inventions (like various surgeries, financial innovations, math things, charkha etc) and more &ldquo;cultural&rdquo; inventions (like stupas or cashmere or some martial art) that aren&rsquo;t as kang-worthy.
+</p>
+</div>
+</div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-10-18 Sat 00:20</p>
+<p class="date">Created: 2025-12-03 Wed 13:49</p>
 </div>
 </body>
 </html>
