--- a/politics/leli-ideology/liberal_ideology.html
+++ b/politics/leli-ideology/liberal_ideology.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-18 Mon 08:28 -->
+<!-- 2025-12-03 Wed 13:49 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Modern liberalism as the ideology of dehātization ⭐</title>
@@ -324,6 +324,14 @@ The 3 obligations (Ṛṇatraya) are to produce children, to learn and to mainta
 <p>
 Leftism is the inversion of Hinduism.
 </p>
+
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1994403886195753429">Twitter</a></p>
+</p>
+
+<p>
+Left-liberalism may be seen as a dark, inverted form of Dharma where Gods are replaced by the Client Groups, Brahman is replaced by the Omnicause, Yajña is replaced by Protests, Brāhmaṇas and priests (who answer only to the gods) are replaced by Left-wing academics and activists (who answer only to the Client Groups), other elites are replaced by &ldquo;Liberals&rdquo; who are the vanguard of the Left, Mokṣa is replaced by &ldquo;Liberation&rdquo; that is the unattainable endpoint of the recursive revolution, the Trivarga Puruṣārtha is abandoned for a totalizing commitment to this all-consuming dharma and the Ṛṇatraya are waived off (waiving off debts being a typical manner by which western religions have gained converts).
+</p>
 </div>
 </div>
 <div id="outline-container-org66e462c" class="outline-2">
@@ -411,7 +419,7 @@ Feynman called it &ldquo;Greek school vs Babylonian school&rdquo; IIRC.
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-18 Mon 08:28</p>
+<p class="date">Created: 2025-12-03 Wed 13:49</p>
 </div>
 </body>
 </html>
