--- a/sitemap.html
+++ b/sitemap.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-11-18 Tue 02:12 -->
+<!-- 2025-12-03 Wed 13:49 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Sitemap of srajma.github.io</title>
@@ -288,9 +288,12 @@
 <li><a href="politics/misc/legend.html">Founding legends</a></li>
 <li><a href="politics/misc/kannada.html">Kannada sub-nationalism</a></li>
 <li><a href="politics/misc/indian_traits.html">Misc Indian traits</a></li>
+<li><a href="politics/misc/ottoman.html">Misleading claims about the Ottoman empire and the Irish famine</a></li>
+<li><a href="politics/misc/muslim_rage_boy.html">Muslim Rage Boy</a></li>
 <li><a href="politics/misc/dalali.html">ON DALĀLĪ AND BAVĀLĪ IN HINDOOSTĀN (ON SIMPING AND CHIMPING IN HINDOOSTĀN).</a></li>
 <li><a href="politics/misc/sindoor.html">Operation Sindoor concluding thoughts</a></li>
 <li><a href="politics/misc/racewars.html">Racewars</a></li>
+<li><a href="politics/misc/rape.html">Rape in India</a></li>
 <li><a href="politics/misc/gulf.html">Speculations on the future trajectory of the Gulf countries</a></li>
 <li><a href="politics/misc/tharoor.html">Tharoor theories</a></li>
 <li><a href="politics/misc/front_fortification.html">Warfare and Front Fortification</a></li>
@@ -324,6 +327,7 @@
 <li><a href="politics/rhetorical-advice/copology.html">Cope-ologia</a></li>
 <li><a href="politics/rhetorical-advice/positive-vision.html">Importance of a positive vision, and knowing WHY you believe what you believe ⭐</a></li>
 <li><a href="politics/rhetorical-advice/misc.html">Misc advice on rhetoric and arguing ⭐</a></li>
+<li><a href="politics/rhetorical-advice/baitability.html">Pompous Baitability</a></li>
 <li><a href="politics/rhetorical-advice/upaya.html">Salesman mentality vs Haka dancer mentality (aka &ldquo;There is no fifth upāya&rdquo;) ⭐</a></li>
 <li><a href="politics/rhetorical-advice/talk.html">Talk! All publicity is good publicity</a></li>
 <li><a href="politics/rhetorical-advice/persuasion.html">To make people Right-wing, reflect on what made you Right-wing ⭐</a></li>
@@ -334,7 +338,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-11-18 Tue 02:12</p>
+<p class="date">Created: 2025-12-03 Wed 13:49</p>
 </div>
 </body>
 </html>
